Fix spacing in footer

--- a/image-uploader/frontend/src/components/Footer/Footer.css
+++ b/image-uploader/frontend/src/components/Footer/Footer.css
@@ -3,3 +3,8 @@ footer {
   display: flex;
   align-items: center;
 }
+
+footer a {
+  margin-left: 1ch;
+  margin-right: 1ch;
+}
